--- a/oa_web/src/main/webapp/WEB-INF/web.xml
+++ b/oa_web/src/main/webapp/WEB-INF/web.xml
@@ -46,5 +46,8 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
+  <welcome-file-list>
+    <welcome-file>login.jsp</welcome-file>
+  </welcome-file-list>
 
 </web-app>
